# latex-html-converter

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT.md  APPLICATION_STATUS.md  ARCHITECTURE.md  BEST_PRACTICES.md  CITATION_FIX_SUMMARY.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  CONVERSION_TEST_STATUS.md  DOCKER.md  DOCKER_SETUP.md  DOCUMENTATION_CLEANUP.md  Dockerfile  ELIFE_CONVERSION_ANALYSIS.md  ELIFE_CONVERSION_ISSUE.md  FIXES_SUMMARY.md  INSTRUCTIONS.md  Makefile  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_OPPORTUNITIES.md  PENDING_OPTIMIZATIONS.md  PROGRESS_SUMMARY.md  PROJECT.md  PR_DESCRIPTION.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  docker.env.template  minimal_test.tex  pyproject.toml  pyrightconfig.json  test.html  test.tex  test_asset_conversion.py  test_conversion.py  test_mathjax.tex  test_rsta.tex
.cursor/agents/: README.md  api-agent.md  conversion-agent.md  devops-agent.md  docs-agent.md  git-cli-agent.md  testing-agent.md
.postman/: LaTeX_Converter_API.postman_collection.json
app/: __init__.py  config.py  exceptions.py  main.py  middleware.py
app/api/: __init__.py  conversion.py  health.py
app/config/: __init__.py
app/configs/: __init__.py  latexml.py
app/models/: __init__.py  conversion.py  request.py  response.py
app/services/: __init__.py  asset_validator.py  assets.py  content_diff.py  content_verification.py  file_discovery.py  html_cleaner.py  html_optimizer.py  html_post.py  html_post_exceptions.py  html_validator.py  latex_preprocessor.py  latexml.py  orchestrator.py  package_manager.py  pdf.py  pdflatex.py  pipeline.py  svg_optimizer.py  tectonic.py  tikz.py
app/templates/: index.html
app/utils/: __init__.py  fs.py  output_manager.py  path_cache.py  path_utils.py  shell.py  svg_utils.py  validation.py
docs/: ARCHITECTURE.md  CONVERSION_PROCESS.md  INSTALLATION.md  LINUX_DEPLOYMENT.md  PATH_DEPTH_IMPROVEMENTS.md  README.md  TECTONIC_EXPLANATION.md  sj-11-scope.md
scripts/: check_file_lengths.py  docker-dev.sh  monitor_conversions.sh  test_sample_files.py  test_sample_files.sh
tests/: __init__.py  run_tests.py  test_asset_conversion.py  test_html_post_processor.py  test_latexml_integration.py  test_latexml_service.py  test_tectonic_integration.py  test_tectonic_service.py
