[tool.poetry]
name = "latex-html-converter"
version = "0.1.0"
description = "LaTeX → HTML5 converter (LaTeXML core) with SVG assets & MathJax."
authors = ["Your Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"

# Optional helpers (nice-to-haves)
pylatexenc = "^2.10"
# plasTeX = "^3.2.0"  # keep commented until needed
psutil = "^7.1.0"
cairosvg = "^2.8.2"
pillow = "^11.3.0"
svgwrite = "^1.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
types-psutil = "^7.0.0.20251001"
pylint = "^3.3.9"
httpx = "^0.28.1"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "PIE", "T20", "SIM", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.mypy]
python_version = "3.11"
strict = true