[tool.poetry]
name = "latex-html-converter"
version = "0.1.0"
description = "LaTeX → HTML5 converter (LaTeXML core) with SVG assets & MathJax."
authors = ["Your Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
jinja2 = "^3.1.2"

# Optional helpers (nice-to-haves)
pylatexenc = "^2.10"
# plasTeX = "^3.2.0"  # keep commented until needed
psutil = "^7.1.0"
cairosvg = "^2.8.2"
pillow = "^11.3.0"
svgwrite = "^1.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
types-psutil = "^7.0.0.20251001"
httpx = "^0.28.1"

[tool.ruff]
line-length = 88
target-version = "py311"
# Note: File length checking (max 500 lines per file) is handled via pre-commit hook
# since Ruff doesn't natively support total file length limits. See .pre-commit-config.yaml

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern syntax)
    "B",    # bugbear (common pitfalls)
    "SIM",  # simplify
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true